k8s/app/10-frontend/frontend.yaml
# Source: frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
---
# Source: frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-main
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/version: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/instance: frontend
      app.kubernetes.io/version: main
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/instance: frontend
        app.kubernetes.io/version: main
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      serviceAccountName: frontend
      containers:
        - name: frontend
          image: ghcr.io/caf3babe/mat-app-frontend:main
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
---
# Source: frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-sha-001a725
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/version: sha-001a725
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/instance: frontend
      app.kubernetes.io/version: sha-001a725
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/instance: frontend
        app.kubernetes.io/version: sha-001a725
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      serviceAccountName: frontend
      containers:
        - name: frontend
          image: ghcr.io/caf3babe/mat-app-frontend:sha-001a725
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  gateways: 
    - istio-system/istio-gateway
  hosts:
    - '*'
  http:
  - route:
    - destination:
        host: frontend
        subset: main
      weight: 90
    - destination:
        host: frontend
        subset: sha-001a725
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: main
    labels:
      app.kubernetes.io/version: main
  - name: sha-001a725
    labels:
      app.kubernetes.io/version: sha-001a725
